<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/chargeRequest_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/header"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chargeRequest_text"
        android:layout_centerHorizontal="true"
        android:theme="@style/ThemeHoloDialog" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_picker"
        android:layout_marginTop="10dp"
        android:id="@+id/charge_bar"
        android:layout_alignRight="@+id/chargeRequest_text"
        android:layout_alignEnd="@+id/chargeRequest_text"
        android:layout_alignLeft="@+id/chargeRequest_text"
        android:layout_alignStart="@+id/chargeRequest_text" />

    <TextView
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/charge_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:id="@+id/charge_text" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/portpicker"
        android:layout_centerHorizontal="true"
        android:onClick="sendNotification"
        android:text="@string/okay"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/feedback_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/portpicker"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@+id/charge_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/buttZero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/p_zero" />

        <RadioButton
            android:id="@+id/buttOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/p_one" />

        <RadioButton
            android:id="@+id/buttTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/p_two" />

        <RadioButton
            android:id="@+id/buttThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/p_three" />

    </RadioGroup>

</RelativeLayout>